<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Methanol</string>
    <string name="not_set">[not set]</string>
    <string name="loader_title">Loading…</string>
    <string name="loader_message">Reading thumbnails, please wait…</string>
    <string name="default_debug_message">No message to display!</string>
    <string name="choose_folder">Choose Image Folder</string>
    <string name="save">Save</string>
    <string name="parent">parent</string>
    <string name="settings">Settings</string>
    <string name="settings_images">Image</string>
    <string name="settings_behavior">Behavior</string>
    <string name="settings_system">System</string>
    <string name="settings_developer">Developer</string>
    <string name="settings_rotate_title">Auto-rotate</string>
    <string name="settings_rotate_summary">If selected images will be rotated to fit the screen better</string>
    <string name="settings_crop_title">Auto-crop</string>
    <string name="settings_crop_summary">If selected images will be cropped to fit the screen</string>
    <string name="settings_autosave_title">Autosave</string>
    <string name="settings_autosave_summary">If selected the current image order will be saved automatically</string>
    <string name="settings_swipe_scroll_title">Scroll Swipe</string>
    <string name="settings_swipe_scroll_summary">Enable or Disable scroll swipe</string>
    <string name="settings_swipe_select_title">Select Swipe</string>
    <string name="settings_swipe_select_summary">Enable or Disable select swipe</string>
    <string name="settings_swipe_simple_title">Simple Swipe</string>
    <string name="settings_swipe_simple_summary">Enable or Disable simple swipe</string>
    <string name="settings_swipe_slide_title">Slide Swipe</string>
    <string name="settings_swipe_slide_summary">Enable or Disable slide swipe</string>
    <string name="settings_swipe_vertical_title">Vertical Swipes</string>
    <string name="settings_swipe_vertical_summary">Enable or Disable vertical swipes</string>
    <string name="settings_jump_back_title">Jump Back</string>
    <string name="settings_jump_back_summary">If selected jump to the fixed image after an insertion</string>
    <string name="settings_preview_back_title">Jump Back After Preview</string>
    <string name="settings_preview_back_summary">If selected jump to the original image after back was pressed</string>
    <string name="settings_reset_title">Reset</string>
    <string name="settings_reset_summary">Reset to default values</string>
    <string name="settings_reload_title">Reload Images</string>
    <string name="settings_reload_summary">Reload thumbnail images</string>
    <string name="settings_delete_title">Delete Methanol Root Folder</string>
    <string name="settings_delete_summary">Delete all Ethanol files on the system</string>
    <string name="settings_debug_title">Debug</string>
    <string name="settings_debug_summary">Display debug messages</string>

</resources>