<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="pref_key_settings_images"
        android:title="@string/settings_images" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_rotate"
            android:summary="@string/settings_rotate_summary"
            android:title="@string/settings_rotate_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_wrap"
            android:summary="@string/settings_wrap_summary"
            android:title="@string/settings_wrap_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_key_settings_system"
        android:title="@string/settings_system" >
        <Preference
            android:key="pref_key_reset"
            android:summary="@string/settings_reset_summary"
            android:title="@string/settings_reset_title" />
        <Preference
            android:key="pref_key_rload"
            android:summary="@string/settings_reload_summary"
            android:title="@string/settings_reload_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_key_settings_developer"
        android:title="@string/settings_developer" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_debug"
            android:summary="@string/settings_debug_summary"
            android:title="@string/settings_debug_title" />
    </PreferenceCategory>

</PreferenceScreen>